--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -472,102 +472,132 @@ ul li {
   background: url(../images/associazioni/cittadinanzattiva.jpg) no-repeat center center/contain;
 }
 .partner .partner-box-2 {
-  background: url(../images/associazioni/animal-equality.png) no-repeat center center/contain;
+  background: url(../images/associazioni/fotografare-la-felicità.jpeg) no-repeat center center/contain;
 }
 .partner .partner-box-3 {
-  background: url(../images/associazioni/spartak-lidense.png) no-repeat center center/contain;
+  background: url(../images/associazioni/animal-equality.png) no-repeat center center/contain;
 }
 .partner .partner-box-4 {
-  background: url(../images/associazioni/save-the-children.jpg) no-repeat center center/contain;
+  background: url(../images/associazioni/zona-controllo-vicinato.jpeg) no-repeat center center/contain;
 }
 .partner .partner-box-5 {
-  background: url(../images/associazioni/ciao-onlus.png) no-repeat center center/contain;
+  background: url(../images/associazioni/spartak-lidense.png) no-repeat center center/contain;
 }
 .partner .partner-box-6 {
-  background: url(../images/associazioni/arca-di-rita.jpg) no-repeat center center/contain;
+  background: url(../images/associazioni/io-noi.jpeg) no-repeat center center/contain;
 }
 .partner .partner-box-7 {
-  background: url(../images/associazioni/made-in-scampia.png) no-repeat center center/contain;
+  background: url(../images/associazioni/save-the-children.jpg) no-repeat center center/contain;
 }
 .partner .partner-box-8 {
-  background: url(../images/associazioni/arte-degas.jpg) no-repeat center center/contain;
+  background: url(../images/associazioni/ciao-onlus.png) no-repeat center center/contain;
 }
 .partner .partner-box-9 {
-  background: url(../images/associazioni/dinamo.jpg) no-repeat center center/contain;
+  background: url(../images/associazioni/arca-di-rita.jpg) no-repeat center center/contain;
 }
 .partner .partner-box-10 {
-  background: url(../images/associazioni/scomodo.png) no-repeat center center/contain;
+  background: url(../images/associazioni/made-in-scampia.png) no-repeat center center/contain;
 }
 .partner .partner-box-11 {
-  background: url(../images/associazioni/collettivo-la-talpa.jpg) no-repeat center center/contain;
+  background: url(../images/associazioni/arte-degas.jpg) no-repeat center center/contain;
 }
 .partner .partner-box-12 {
-  background: url(../images/associazioni/medici-senza-frontiere.png) no-repeat center center/contain;
+  background: url(../images/associazioni/dinamo.jpg) no-repeat center center/contain;
 }
 .partner .partner-box-13 {
-  background: url(../images/associazioni/sea-shepherd.jpeg) no-repeat center center/contain;
+  background: url(../images/associazioni/scomodo.png) no-repeat center center/contain;
 }
 .partner .partner-box-14 {
-  background: url(../images/associazioni/greenpeace.png) no-repeat center center/contain;
+  background: url(../images/associazioni/collettivo-la-talpa.jpg) no-repeat center center/contain;
 }
 .partner .partner-box-15 {
-  background: url(../images/associazioni/croce-rossa.png) no-repeat center center/contain;
+  background: url(../images/associazioni/medici-senza-frontiere.png) no-repeat center center/contain;
 }
 .partner .partner-box-16 {
-  background: url(../images/associazioni/apurimac.jpg) no-repeat center center/contain;
+  background: url(../images/associazioni/sea-shepherd.jpeg) no-repeat center center/contain;
 }
 .partner .partner-box-17 {
-  background: url(../images/associazioni/giovani-per-la-pace.gif) no-repeat center center/contain;
+  background: url(../images/associazioni/anime-inchiostro.jpeg) no-repeat center center/contain;
 }
 .partner .partner-box-18 {
-  background: url(../images/associazioni/alternativa.jpg) no-repeat center center/contain;
+  background: url(../images/associazioni/greenpeace.png) no-repeat center center/contain;
 }
 .partner .partner-box-19 {
-  background: url(../images/associazioni/unicusano.png) no-repeat center center/contain;
+  background: url(../images/associazioni/croce-rossa.png) no-repeat center center/contain;
 }
 .partner .partner-box-20 {
-  background: url(../images/associazioni/animalisti-italiani.jpg) no-repeat center center/contain;
+  background: url(../images/associazioni/apurimac.jpg) no-repeat center center/contain;
 }
 .partner .partner-box-21 {
-  background: url(../images/associazioni/ant.jpg) no-repeat center center/contain;
+  background: url(../images/associazioni/agisco.jpeg) no-repeat center center/contain;
 }
 .partner .partner-box-22 {
-  background: url(../images/associazioni/nissolino-corsi.jpg) no-repeat center center/contain;
+  background: url(../images/associazioni/giovani-per-la-pace.gif) no-repeat center center/contain;
 }
 .partner .partner-box-23 {
-  background: url(../images/associazioni/baobab.jpg) no-repeat center center/contain;
+  background: url(../images/associazioni/alternativa.jpg) no-repeat center center/contain;
 }
 .partner .partner-box-24 {
-  background: url(../images/associazioni/emergency.png) no-repeat center center/contain;
+  background: url(../images/associazioni/unicusano.png) no-repeat center center/contain;
 }
 .partner .partner-box-25 {
-  background: url(../images/associazioni/book-crossing-ostia.png) no-repeat center center/contain;
+  background: url(../images/associazioni/amici-di-fruzzico.jpeg) no-repeat center center/contain;
 }
 .partner .partner-box-26 {
-  background: url(../images/associazioni/movimento-non-violento.jpg) no-repeat center center/contain;
+  background: url(../images/associazioni/animalisti-italiani.jpg) no-repeat center center/contain;
 }
 .partner .partner-box-27 {
-  background: url(../images/associazioni/lipu.jpg) no-repeat center center/contain;
+  background: url(../images/associazioni/ant.jpg) no-repeat center center/contain;
 }
 .partner .partner-box-28 {
-  background: url(../images/associazioni/amnesty-international.png) no-repeat center center/contain;
+  background: url(../images/associazioni/territorio-narrante.jpeg) no-repeat center center/contain;
 }
 .partner .partner-box-29 {
-  background: url(../images/associazioni/ostia-in-bici.jpg) no-repeat center center/contain;
+  background: url(../images/associazioni/nissolino-corsi.jpg) no-repeat center center/contain;
 }
 .partner .partner-box-30 {
-  background: url(../images/associazioni/associazione-tutela-pipistrelli.jpg) no-repeat center center/contain;
+  background: url(../images/associazioni/baobab.jpg) no-repeat center center/contain;
 }
 .partner .partner-box-31 {
-  background: url(../images/associazioni/ostiaxlafrica.jpg) no-repeat center center/contain;
+  background: url(../images/associazioni/emergency.png) no-repeat center center/contain;
 }
 .partner .partner-box-32 {
-  background: url(../images/associazioni/observo.png) no-repeat center center/contain;
+  background: url(../images/associazioni/siamo-quasi-una-cosa-seria.jpeg) no-repeat center center/contain;
 }
 .partner .partner-box-33 {
-  background: url(../images/associazioni/happy-time.png) no-repeat center center/contain;
+  background: url(../images/associazioni/book-crossing-ostia.png) no-repeat center center/contain;
 }
 .partner .partner-box-34 {
+  background: url(../images/associazioni/movimento-non-violento.jpg) no-repeat center center/contain;
+}
+.partner .partner-box-35 {
+  background: url(../images/associazioni/asilo-nel-bosco.jpeg) no-repeat center center/contain;
+}
+.partner .partner-box-36 {
+  background: url(../images/associazioni/lipu.jpg) no-repeat center center/contain;
+}
+.partner .partner-box-37 {
+  background: url(../images/associazioni/amnesty-international.png) no-repeat center center/contain;
+}
+.partner .partner-box-38 {
+  background: url(../images/associazioni/ostia-in-bici.jpg) no-repeat center center/contain;
+}
+.partner .partner-box-39 {
+  background: url(../images/associazioni/associazione-tutela-pipistrelli.jpg) no-repeat center center/contain;
+}
+.partner .partner-box-40 {
+  background: url(../images/associazioni/ostiaxlafrica.jpg) no-repeat center center/contain;
+}
+.partner .partner-box-41 {
+  background: url(../images/associazioni/informazione-attiva.jpg) no-repeat center center/contain;
+}
+.partner .partner-box-42 {
+  background: url(../images/associazioni/observo.png) no-repeat center center/contain;
+}
+.partner .partner-box-43 {
+  background: url(../images/associazioni/happy-time.png) no-repeat center center/contain;
+}
+.partner .partner-box-44 {
   background: url(../images/associazioni/cetro-di-aiuto-alla-vita.png) no-repeat center center/contain;
 }
 
