--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -459,6 +459,8 @@ ul li {
   border-radius: 5px;
 }
 
+
+}
 /* 
  * 6.7 Section: Schedule
  */
@@ -695,6 +697,7 @@ ul li {
   }
 }
 @media (min-width: 992px) {
+
   .grid-item-md-6 {
     width: 50%;
   }
